--- a/Home Page/html/index.html
+++ b/Home Page/html/index.html
@@ -62,19 +62,19 @@
     <!-- the events slideshow -->
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <a href="https://www.worldofgothic.com">
+            <a href="#">
                 <img src="../pictures/dress.jpg" style="width:100%">
             </a>
         </div>
 
         <div class="mySlides fade">
-            <a href="https://www.youtube.com">
+            <a href="#">
                 <img src="../pictures/alvensia-angela-f4q2xWxIQW0-unsplash.jpg" style="width:100%">
             </a>
         </div>
 
         <div class="mySlides fade">
-            <a href="https://www.amazon.com">
+            <a href="#">
                 <img src="../pictures/yashar-molaee-hW5DM2kpjYU-unsplash.jpg" style="width:100%">
                   
             </a>
